dark theme search text visibility fix

--- a/sass/blocks/default/components/dropdown.scss
+++ b/sass/blocks/default/components/dropdown.scss
@@ -118,6 +118,7 @@
 							min-width: auto;
 							padding-right: 8px !important; // Quick fix for the gap between input and arrow, might need to be revised later.
 							transition: unset;
+							color: var( --srfm-color-input-text );
 
 							// Will come to this later.
 							&::placeholder {
